--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <section id="contact-me">
             <h1 class="section-title">Contact Me</h1>
             <div class="section-content">
-                <p> bla bla bla</p>;
+                <p> Test</p>;
             </div>
 
 
@@ -108,7 +108,7 @@
 
         <section id="resume">
             <h1>Resume</h1>
-            <p> bla bla bla</p>
+            <p> Test</p>
         </section>
     </div>
 
